[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "takadmin"
version = "1.0.0"
description = "TAK Server User Management CLI Tool"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
    {name = "TAK Admin Tool Contributors"}
]
keywords = ["tak", "tak-server", "cli", "user-management", "administration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "cryptography>=3.4.0",
]

[project.scripts]
takadmin = "takadmin:main"

[project.urls]
Homepage = "https://github.com/snstac/takadmin"
Documentation = "https://github.com/snstac/takadmin#readme"
Repository = "https://github.com/snstac/takadmin"
Issues = "https://github.com/snstac/takadmin/issues"

[tool.setuptools]
py-modules = ["takadmin"]
